--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-picker/picker": "^2.11.0",
-    "@react-navigation/bottom-tabs": "^7.3.15",
-    "@react-navigation/native": "^7.1.11",
-    "@react-navigation/native-stack": "^7.3.16",
-    "expo": "~53.0.11",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-firebase/app": "^22.2.1",
+    "@react-native-firebase/auth": "^22.2.1",
+    "@react-native-firebase/storage": "^22.2.1",
+    "@react-navigation/bottom-tabs": "^7.3.17",
+    "@react-navigation/native": "^7.1.13",
+    "@react-navigation/native-stack": "^7.3.18",
+    "@react-navigation/stack": "^7.3.6",
+    "expo": "~53.0.10",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.9.1",
+    "prop-types": "^15.8.1",
     "react": "19.0.0",
-    "react-native": "0.79.3"
+    "react-native": "0.79.3",
+    "react-native-picker-select": "^9.3.1",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
